# datadog-test

./: .gitignore  docker-compose.yml
agents/: Dockerfile  main.py  pyproject.toml
backend/: datadog_service.py  main.py  pyproject.toml
backend/logger/: datadog_handler.py
frontend/: Dockerfile  index.html  package.json
frontend/public/: index.html
frontend/src/: App.jsx  App.tsx  datadog.js  datadog.ts  index.jsx  index.tsx
mcp/: Dockerfile  main.py
mcp_servers/: main.py
registry/: main.py  pyproject.toml
registry/logger/: datadog_handler.py  logger.py
