[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddtrace>=4.1.0",
    "fastapi>=0.127.0",
    "langchain>=1.2.0",
    "langchain-core>=1.2.5",
    "langgraph>=1.0.5",
    "requests>=2.32.5",
]
